--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,11 @@ h3 {
   padding-top: 100px;
 }
 
+.thumbnail-image {
+    height: 20rem;
+    margin-top: 50px;
+}
+
 .middle-container {
     line-height: 2;
     text-align: center;
@@ -79,6 +84,12 @@ h3 {
     margin-left: 30px;
 }
 
+.hidden-link {
+    font-family: "Merriweather", serif;
+    color: #40514E;
+    text-decoration: none;
+}
+
 .bottom-container {
     padding-top: 20px;
     line-height: 2;
@@ -102,7 +113,12 @@ h3 {
     color: #f8f3eb;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    margin: 50px;
+    margin: 20px;
+}
+
+.links {
+    display: inline;
+    margin: auto;
 }
 
 .copyright {
